# Flipper

./: .gitignore  Background.cc  Background.h  Ball.cc  Ball.h  BallExpander.cc  BallExpander.h  Brick.cc  Brick.h  Bumper.cc  Bumper.h  ButtonManager.cc  ButtonManager.h  CMakeLists.txt  Circle.cc  Circle.h  Collision.cc  Collision.h  Door.cc  Door.h  Flipper.cc  Flipper.h  FlipperLeft.cc  FlipperLeft.h  FlipperRight.cc  FlipperRight.h  Game.cc  Game.h  GameInfo.cc  GameInfo.h  Input.cc  Input.h  Inputs.cc  Inputs.h  Interfaces.h  Launcher.cc  Launcher.h  Loader.h  Map.cc  Map.h  (+30 more)
